--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://rokarts.com/">
+    <meta property="og:url" content="https://rokarts.xyz/">
     <meta property="og:title" content="Ro-Karts - Anime Racing Game">
     <meta property="og:description" content="Experience the thrill of anime-inspired racing in Ro-Karts! Join the ultimate racing adventure with unique tracks, power-ups, and competitive gameplay.">
-    <meta property="og:image" content="https://rokarts.com/images/preview.jpg">
+    <meta property="og:image" content="https://rokarts.xyz/images/preview.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://rokarts.com/">
+    <meta property="twitter:url" content="https://rokarts.xyz/">
     <meta property="twitter:title" content="Ro-Karts - Anime Racing Game">
     <meta property="twitter:description" content="Experience the thrill of anime-inspired racing in Ro-Karts! Join the ultimate racing adventure with unique tracks, power-ups, and competitive gameplay.">
-    <meta property="twitter:image" content="https://rokarts.com/images/preview.jpg">
+    <meta property="twitter:image" content="https://rokarts.xyz/images/preview.jpg">
 
     <!-- Discord / iMessage -->
     <meta name="theme-color" content="#FFD700">
