--- a/team/index.html
+++ b/team/index.html
@@ -11,17 +11,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://rokarts.com/team">
+    <meta property="og:url" content="https://rokarts.xyz/team">
     <meta property="og:title" content="Ro-Karts Team - Meet Our Developers">
     <meta property="og:description" content="Meet the talented team behind Ro-Karts! Get to know our developers, moderators, and community managers who make this amazing game possible.">
-    <meta property="og:image" content="https://rokarts.com/images/team-preview.jpg">
+    <meta property="og:image" content="https://rokarts.xyz/images/team-preview.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://rokarts.com/team">
+    <meta property="twitter:url" content="https://rokarts.xyz/team">
     <meta property="twitter:title" content="Ro-Karts Team - Meet Our Developers">
     <meta property="twitter:description" content="Meet the talented team behind Ro-Karts! Get to know our developers, moderators, and community managers who make this amazing game possible.">
-    <meta property="twitter:image" content="https://rokarts.com/images/team-preview.jpg">
+    <meta property="twitter:image" content="https://rokarts.xyz/images/team-preview.jpg">
 
     <!-- Discord / iMessage -->
     <meta name="theme-color" content="#FFD700">
