--- a/sneaks/index.html
+++ b/sneaks/index.html
@@ -11,17 +11,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://rokarts.com/sneaks">
+    <meta property="og:url" content="https://rokarts.xyz/sneaks">
     <meta property="og:title" content="Ro-Karts Sneak Peeks - Upcoming Features">
     <meta property="og:description" content="Get an exclusive look at upcoming Ro-Karts features! Preview new tracks, karts, and exciting updates coming to the game.">
-    <meta property="og:image" content="https://rokarts.com/images/sneaks-preview.jpg">
+    <meta property="og:image" content="https://rokarts.xyz/images/sneaks-preview.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://rokarts.com/sneaks">
+    <meta property="twitter:url" content="https://rokarts.xyz/sneaks">
     <meta property="twitter:title" content="Ro-Karts Sneak Peeks - Upcoming Features">
     <meta property="twitter:description" content="Get an exclusive look at upcoming Ro-Karts features! Preview new tracks, karts, and exciting updates coming to the game.">
-    <meta property="twitter:image" content="https://rokarts.com/images/sneaks-preview.jpg">
+    <meta property="twitter:image" content="https://rokarts.xyz/images/sneaks-preview.jpg">
 
     <!-- Discord / iMessage -->
     <meta name="theme-color" content="#FFD700">
