--- a/about/index.html
+++ b/about/index.html
@@ -11,17 +11,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://rokarts.com/about">
+    <meta property="og:url" content="https://rokarts.xyz/about">
     <meta property="og:title" content="About Ro-Karts - Game Features & Details">
     <meta property="og:description" content="Discover what makes Ro-Karts special! Learn about our racing mechanics, power-ups, competitions, and regular updates that keep the game exciting.">
-    <meta property="og:image" content="https://rokarts.com/images/about-preview.jpg">
+    <meta property="og:image" content="https://rokarts.xyz/images/about-preview.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://rokarts.com/about">
+    <meta property="twitter:url" content="https://rokarts.xyz/about">
     <meta property="twitter:title" content="About Ro-Karts - Game Features & Details">
     <meta property="twitter:description" content="Discover what makes Ro-Karts special! Learn about our racing mechanics, power-ups, competitions, and regular updates that keep the game exciting.">
-    <meta property="twitter:image" content="https://rokarts.com/images/about-preview.jpg">
+    <meta property="twitter:image" content="https://rokarts.xyz/images/about-preview.jpg">
 
     <!-- Discord / iMessage -->
     <meta name="theme-color" content="#FFD700">
