--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
             <!-- Community Director Section -->
             <div class="team-category">
-                <h3 class="category-title">Community Director</h3>
+                <h3 class="category-title">Community Directors</h3>
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-avatar">
