--- a/index.html
+++ b/index.html
@@ -360,13 +360,6 @@
 
                     <div class="team-member">
                         <div class="member-avatar">
-                            <img src="images/akshat.webp" alt="Akshat">
-                        </div>
-                        <h4 class="member-name">Akshat</h4>
-                    </div>
-
-                    <div class="team-member">
-                        <div class="member-avatar">
                             <img src="images/setro.webp" alt="Setro">
                         </div>
                         <h4 class="member-name">Setro</h4>
@@ -387,16 +380,16 @@
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-avatar">
-                            <img src="images/Bogotbandz.webp" alt="Bogotbandz">
+                            <img src="images/akshat.webp" alt="Akshat">
                         </div>
-                        <h4 class="member-name">Bogotbandz</h4>
+                        <h4 class="member-name">Akshat</h4>
                     </div>
                 </div>
             </div>
 
             <!-- Community Director Section -->
             <div class="team-category">
-                <h3 class="category-title">Community Directors</h3>
+                <h3 class="category-title">Community Director</h3>
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-avatar">
@@ -410,6 +403,19 @@
                             <img src="images/zera.gif" alt="Zera">
                         </div>
                         <h4 class="member-name">Zera</h4>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Head of Testing Section -->
+            <div class="team-category">
+                <h3 class="category-title">Head of Testing</h3>
+                <div class="team-grid">
+                    <div class="team-member">
+                        <div class="member-avatar">
+                            <img src="images/Ilyynf.webp" alt="Ilyynf">
+                        </div>
+                        <h4 class="member-name">Ilyynf</h4>
                     </div>
                 </div>
             </div>
