--- a/index.html
+++ b/index.html
@@ -222,9 +222,118 @@
             transform: translateY(-1px);
             box-shadow: 0 4px 12px rgba(255, 215, 0, 0.2);
         }
+
+        .notification-container {
+            padding: 2rem 2rem;
+            display: flex;
+            justify-content: center;
+            background: transparent;
+            position: absolute;
+            top: 350px;
+            width: 100%;
+            z-index: 10;
+            animation: fadeInDown 0.8s ease-out;
+        }
+
+        .notification {
+            background: rgba(10, 10, 15, 0.95);
+            border: 1px solid rgba(255, 215, 0, 0.3);
+            border-radius: 50px;
+            padding: 0.5rem 1.5rem;
+            display: inline-flex;
+            align-items: center;
+            gap: 0.75rem;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 4px 12px rgba(255, 215, 0, 0.1);
+            color: rgba(255, 255, 255, 0.9);
+            font-size: 0.9rem;
+            transition: all 0.3s ease;
+            animation: pulse 2s infinite;
+        }
+
+        .notification:hover {
+            border-color: rgba(255, 215, 0, 0.5);
+            box-shadow: 0 6px 16px rgba(255, 215, 0, 0.15);
+            transform: translateY(-2px);
+        }
+
+        .news-tag {
+            background: #FFD700;
+            color: #0A0A0F;
+            padding: 0.2rem 0.6rem;
+            border-radius: 4px;
+            font-size: 0.8rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            animation: glow 2s infinite;
+        }
+
+        @keyframes fadeInDown {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.02);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
+
+        @keyframes glow {
+            0% {
+                box-shadow: 0 0 5px rgba(255, 215, 0, 0.5);
+            }
+            50% {
+                box-shadow: 0 0 15px rgba(255, 215, 0, 0.7);
+            }
+            100% {
+                box-shadow: 0 0 5px rgba(255, 215, 0, 0.5);
+            }
+        }
+
+        /* Adjust hero content spacing accordingly */
+        .hero-content {
+            padding-top: 180px; /* Increased padding to maintain spacing */
+        }
+
+        @media (max-width: 768px) {
+            .notification-container {
+                padding: 0.75rem 1rem;
+                top: 280px;
+            }
+            
+            .notification {
+                flex-direction: column;
+                text-align: center;
+                padding: 0.5rem 1rem;
+                gap: 0.5rem;
+                width: 90%;
+                margin: 0 auto;
+            }
+        }
     </style>
 </head>
 <body>
+    <!-- Notification Banner -->
+    <div class="notification-container">
+        <div class="notification">
+            <span class="news-tag">NEWS</span>
+            The game is set to launch by late March at the latest.
+        </div>
+    </div>
+
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo-section">
@@ -393,9 +502,9 @@
                 </div>
             </div>
 
-            <!-- Community Director Section -->
+            <!-- Server Manager Section -->
             <div class="team-category">
-                <h3 class="category-title">Community Director</h3>
+                <h3 class="category-title">Server Manager</h3>
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-avatar">
