--- a/team/index.html
+++ b/team/index.html
@@ -260,9 +260,9 @@
                 </div>
             </div>
 
-            <!-- Community Director Section -->
+            <!-- Server Manager Section -->
             <div class="team-category">
-                <h3 class="category-title">Community Director</h3>
+                <h3 class="category-title">Server Manager</h3>
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-avatar">
