--- a/index.html
+++ b/index.html
@@ -236,7 +236,14 @@
         }
 
         .notification {
-            background: rgba(10, 10, 15, 0.95);
+            cursor: pointer !important;
+            position: relative;
+            z-index: 2001;
+            pointer-events: auto !important;
+            background: rgba(10, 10, 15);
+            background: rgba(10, 10, 15, 0.98);
+            -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 215, 0, 0.3);
             border-radius: 50px;
             padding: 0.5rem 1.5rem;
@@ -330,16 +337,12 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.85); /* Darker fallback background */
-            -webkit-backdrop-filter: blur(5px);
-            backdrop-filter: blur(5px);
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            background: rgba(0, 0, 0, 0.85);
             z-index: 2000;
             opacity: 0;
             visibility: hidden;
             transition: all 0.3s ease;
+            pointer-events: auto !important;
         }
 
         .update-popup {
@@ -354,14 +357,6 @@
             opacity: 0;
             transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
             box-shadow: 0 0 30px rgba(0, 0, 0, 0.5); /* Add shadow for better visibility */
-        }
-
-        .notification {
-            background: rgb(10, 10, 15); /* Solid background as fallback */
-            background: rgba(10, 10, 15, 0.98); /* Semi-transparent for modern browsers */
-            -webkit-backdrop-filter: blur(10px);
-            backdrop-filter: blur(10px);
-            /* Rest of your notification styles... */
         }
     </style>
 </head>
@@ -770,11 +765,16 @@
             const popup = document.getElementById('updatePopup');
             const closeBtn = document.getElementById('closePopupBtn');
 
-            // Show popup when clicking notification
-            notification.addEventListener('click', function() {
+            // Add touchstart event for mobile/tablet
+            notification.addEventListener('click', showPopup);
+            notification.addEventListener('touchstart', showPopup);
+
+            function showPopup(e) {
+                e.preventDefault(); // Prevent any default behavior
+                e.stopPropagation(); // Stop event bubbling
                 popup.classList.add('active');
                 document.body.style.overflow = 'hidden';
-            });
+            }
 
             // Close popup when clicking X button
             closeBtn.addEventListener('click', function() {
