--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
             <h1 class="title-text">Ro-Karts</h1>
             <p class="subtitle">Where Anime Meets Racing Excellence</p>
             <div class="cta-buttons">
-                <a href="https://www.roblox.com/communities/33364763/Ro-Karts-Official#!/about" class="btn primary">PLAY NOW</a>
+                <a href="https://www.roblox.com/communities/33364763/Ro-Karts-Official#!/about" class="btn primary">JOIN THE ROBLOX GROUP</a>
                 <a href="/sneaks" class="btn secondary">Watch Trailer</a>
             </div>
         </div>
