--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     <div class="notification-container">
         <div class="notification" id="updateNotification">
             <span class="news-tag">NEWS</span>
-            The game is set to launch by late March at the latest
+            News letter & Game Update Log
         </div>
     </div>
 
@@ -377,7 +377,7 @@
                 <button class="update-close-btn" id="closePopupBtn">×</button>
             </div>
             <div class="update-popup-body">
-                <p>Hello everyone! We wanted to share a quick update with all of you regarding the game. We have been in development working hard for around 8 months now, and we're very close to releasing tester access as well as launching the game for all to play by March at the latest. Stay tuned for giveaways and sneak peeks via our Discord!</p>
+                <p>Hello everyone! We wanted to share a quick update with all of you regarding the game. We have been in development working hard for around 8 months now, and we're very close to releasing tester access as well as launching the game for all to play by April at the latest. Stay tuned for giveaways and sneak peeks via our Discord!</p>
                 <p>If you have any questions, join our <a href="https://discord.gg/rokarts" target="_blank">Discord server</a> and stay tuned for more updates!</p>
             </div>
         </div>
