--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 
             <!-- Project Manager Section -->
             <div class="team-category">
-                <h3 class="category-title">Project Manager</h3>
+                <h3 class="category-title">Project Managers</h3>
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-avatar">
