--- a/index.html
+++ b/index.html
@@ -317,17 +317,32 @@
 
         @media (max-width: 768px) {
             .notification-container {
+                position: fixed;
+                bottom: 20px;
+                top: auto;
                 padding: 0.75rem 1rem;
-                top: 280px;
+                animation: fadeInUp 0.8s ease-out;
             }
             
             .notification {
-                flex-direction: column;
-                text-align: center;
-                padding: 0.5rem 1rem;
-                gap: 0.5rem;
-                width: 90%;
+                flex-direction: row;
+                text-align: left;
+                padding: 0.75rem 1.5rem;
+                gap: 0.75rem;
+                width: auto;
+                max-width: 90%;
                 margin: 0 auto;
+            }
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
             }
         }
 
