--- a/index.html
+++ b/index.html
@@ -317,11 +317,10 @@
 
         @media (max-width: 768px) {
             .notification-container {
-                position: fixed;
-                bottom: 20px;
-                top: auto;
+                position: absolute;
+                top: 150px;
+                bottom: auto;
                 padding: 0.75rem 1rem;
-                animation: fadeInUp 0.8s ease-out;
             }
             
             .notification {
@@ -332,6 +331,10 @@
                 width: auto;
                 max-width: 90%;
                 margin: 0 auto;
+            }
+
+            .hero-content {
+                padding-top: 220px;
             }
         }
 
