--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         @media (max-width: 768px) {
             .notification-container {
                 position: absolute;
-                top: 250px;
+                top: 350px; /* Increased from 250px to move it further down */
                 bottom: auto;
                 padding: 0.75rem 1rem;
             }
@@ -334,7 +334,7 @@
             }
 
             .hero-content {
-                padding-top: 300px;
+                padding-top: 400px; /* Increased from 300px to maintain proper spacing */
             }
         }
 
