--- a/index.html
+++ b/index.html
@@ -310,11 +310,20 @@
             }
         }
 
-        /* Adjust hero content spacing accordingly */
+        /* Keep original hero content styles for PC */
         .hero-content {
             padding-top: 180px;
         }
 
+        .hero-content .title-text {
+            /* Keep original PC styles */
+        }
+
+        .hero-content .subtitle {
+            /* Keep original PC styles */
+        }
+
+        /* Mobile-specific changes */
         @media (max-width: 768px) {
             .notification-container {
                 position: absolute;
@@ -339,14 +348,14 @@
 
             /* Make the title bigger on mobile */
             .hero-content .title-text {
-                font-size: 4rem; /* Increase from default size */
+                font-size: 4rem;
                 margin-bottom: 1rem;
             }
 
-            /* Optionally adjust subtitle for better proportion */
+            /* Only adjust subtitle size on mobile */
             .hero-content .subtitle {
-                font-size: 1.5rem;
-                margin-bottom: 2rem;
+                font-size: 1.2rem;
+                line-height: 1.4;
             }
         }
 
