--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 <button class="update-close-btn" id="closePopupBtn">×</button>
             </div>
             <div class="update-popup-body">
-                <p>Hello everyone! We wanted to share a quick update with all of you regarding the game. We have been in development working hard for around 8 months now, and we're very close to releasing tester access as well as launching the game for all to play by April at the latest. Stay tuned for giveaways and sneak peeks via our Discord!</p>
+                <p>Hello everyone! We wanted to share a quick update with all of you regarding the game. We have been in development working hard for around 8 months now, and we're very close to releasing tester access as well as launching the game for all to play by <span style="color: #FFD700; font-weight: 600;">Late March OR Late April</span> at the latest. Stay tuned for giveaways and sneak peeks via our Discord!</p>
                 <p>If you have any questions, join our <a href="https://discord.gg/rokarts" target="_blank">Discord server</a> and stay tuned for more updates!</p>
             </div>
         </div>
