--- a/xoru.html
+++ b/xoru.html
@@ -394,7 +394,7 @@
         </div>
 
         <div class="description">
-            <p class="typewriter">Just a guy on a rush to get paid</p>
+            <p class="typewriter">Just a mf on a rush to get paid</p>
         </div>
 
         <div class="badges">
