--- a/xoru.html
+++ b/xoru.html
@@ -15,15 +15,15 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="profile">
     <meta property="og:url" content="https://rokarts.xyz/xoru">
-    <meta property="og:title" content="xoru | Ro-Karts Project Manager">
-    <meta property="og:description" content="Project Manager and Site Developer for Ro-Karts, an anime-inspired racing game. Based in Chicago, IL.">
+    <meta property="og:title" content="xoru | Ro-Karts">
+    <meta property="og:description" content="Project Manager and Site Developer for Ro-Karts">
     <meta property="og:image" content="https://rokarts.xyz/images/xoru.webp">
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:card" content="summary">
     <meta property="twitter:url" content="https://rokarts.xyz/xoru">
-    <meta property="twitter:title" content="xoru | Ro-Karts Project Manager">
-    <meta property="twitter:description" content="Project Manager and Site Developer for Ro-Karts, an anime-inspired racing game. Based in Chicago, IL.">
+    <meta property="twitter:title" content="xoru | Ro-Karts">
+    <meta property="twitter:description" content="Project Manager and Site Developer for Ro-Karts">
     <meta property="twitter:image" content="https://rokarts.xyz/images/xoru.webp">
 
     <!-- Discord / iMessage -->
@@ -394,7 +394,7 @@
         </div>
 
         <div class="description">
-            <p class="typewriter">Just a mf on a rush to get paid</p>
+            <p class="typewriter">Just a guy on a rush to get paid</p>
         </div>
 
         <div class="badges">
