--- a/max.html
+++ b/max.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Primary Meta Tags -->
-    <title>max | Ro-Karts</title>
-    <meta name="title" content="max | Ro-Karts">
+    <title>𝕸𝖆𝖝 | Ro-Karts</title>
+    <meta name="title" content="𝕸𝖆𝖝 | Ro-Karts">
     <meta name="description" content="Server Manager for OtakuGaming and Admin for his other servers. Based in Iraq.">
     <meta name="keywords" content="max, Ro-Karts, Server Manager, OtakuGaming, Admin">
     <meta name="author" content="max">
@@ -351,7 +351,7 @@
 
     <div class="profile-card">
         <img src="/images/max.webp" class="profile-avatar" alt="max">
-        <h1 class="username">max</h1>
+        <h1 class="username">𝕸𝖆𝖝</h1>
         <p class="role">Server Manager @ OtakuGaming</p>
         
         <div class="location">
