--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
 
                     <div class="team-member">
                         <div class="member-avatar">
-                            <img src="C:\Users\xorul\OneDrive\Desktop\Ro-Karts-main\images\eadb1482d070cdcc33b13b25cb296b68.png" alt="The Powerful Entity">
+                            <img src="images/The Powerful Entity.png" alt="The Powerful Entity">
                         </div>
                         <h4 class="member-name">The Powerful Entity</h4>
                     </div>
